--- a/package.json
+++ b/package.json
@@ -14,6 +14,12 @@
         "vite": "^3.0.0"
     },
     "dependencies": {
+        "@fullcalendar/core": "^5.11.3",
+        "@fullcalendar/daygrid": "^5.11.3",
+        "@fullcalendar/interaction": "^5.11.3",
+        "@fullcalendar/resource-timegrid": "^5.11.3",
+        "@fullcalendar/resource-timeline": "^5.11.3",
+        "@fullcalendar/vue3": "^5.11.2",
         "@vitejs/plugin-vue": "^3.0.3",
         "vue": "^3.2.36",
         "vue-loader": "^17.0.0"
