Updated env example file.

--- a/.env.example
+++ b/.env.example
@@ -4,10 +4,12 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
+# LOGGING
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+# DATABASE
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
@@ -15,19 +17,47 @@ DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
 
-BROADCAST_DRIVER=log
-CACHE_DRIVER=file
-FILESYSTEM_DISK=local
-QUEUE_CONNECTION=sync
+# APP
+RESERVATION_GENERAL_OPEN_TIME="09:00"
+RESERVATION_GENERAL_CLOSE_TIME="22:00"
+RESERVATION_WEEKLY_RESERVATION_QUOTA=5
+RESERVATION_DAILY_HOUR_QUOTA=4
+RESERVATION_WEEKLY_HOUR_QUOTA=12
+RESERVATION_BLOCK_HOUR_QUOTA=4
+RESERVATION_DATE_FORMAT="DD.MM.YYYY"
+RESERVATION_TIME_FORMAT="H:mm"
+RESERVATION_TIMESLOT_LENGTH="00:30"
+RESERVATION_WEEKS_IN_ADVANCE=2
+RESERVATION_CLEANUP_INTERVAL="01:00"
+USER_SUSPENSION_ENABLED=true
+USER_SUSPENSION_DAYS=3
+DATE_FORMAT="d.m.Y"
+TIME_FORMAT="H:i"
+AUTH_PRETEND=false
+AUTH_ENDPOINT="https://path/to/auth/endpoint"
+TEST_USER_NAME=MeUser
+TEST_USER_PASSWORD=iAmSecret
+MODAL_EFFECT="fall" # See https://postare.github.io/bulma-modal-fx/
+
+# For usage in JS:
+MIX_APP_NAME=${APP_NAME}
+MIX_APP_URL=${APP_URL}
+MIX_RESERVATION_GENERAL_OPEN_TIME=${RESERVATION_GENERAL_OPEN_TIME}
+MIX_RESERVATION_GENERAL_CLOSE_TIME=${RESERVATION_GENERAL_CLOSE_TIME}
+MIX_RESERVATION_DAILY_HOUR_QUOTA=${RESERVATION_DAILY_HOUR_QUOTA}
+MIX_RESERVATION_BLOCK_HOUR_QUOTA=${RESERVATION_BLOCK_HOUR_QUOTA}
+MIX_RESERVATION_DATE_FORMAT=${RESERVATION_DATE_FORMAT}
+MIX_RESERVATION_TIME_FORMAT=${RESERVATION_TIME_FORMAT}
+MIX_RESERVATION_TIMESLOT_LENGTH=${RESERVATION_TIMESLOT_LENGTH}
+MIX_RESERVATION_WEEKS_IN_ADVANCE=${RESERVATION_WEEKS_IN_ADVANCE}
+MIX_MODAL_EFFECT=${MODAL_EFFECT}
+
+# SESSIOMS
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
+SESSION_DOMAIN=.localhost
 
-MEMCACHED_HOST=127.0.0.1
-
-REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
-REDIS_PORT=6379
-
+# MAIL
 MAIL_MAILER=smtp
 MAIL_HOST=mailhog
 MAIL_PORT=1025
@@ -36,6 +66,18 @@ MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
+
+# MISC
+BROADCAST_DRIVER=log
+CACHE_DRIVER=file
+FILESYSTEM_DISK=local
+QUEUE_CONNECTION=sync
+
+MEMCACHED_HOST=127.0.0.1
+
+REDIS_HOST=127.0.0.1
+REDIS_PASSWORD=null
+REDIS_PORT=6379
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
