--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@fullcalendar/resource-timeline": "^5.11.3",
         "@fullcalendar/vue3": "^5.11.2",
         "@vitejs/plugin-vue": "^3.0.3",
+        "dayjs": "^1.11.5",
         "vue": "^3.2.36",
         "vue-loader": "^17.0.0"
     }
