Layout, Inertia, Auth

--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,19 @@ DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
 
+# AUTH
+AUTH_METHOD=alma
+AUTH_API_ENDPOINT=https://www.google.de
+#AUTH_API_ENDPOINT=https://httpbin.org/post
+AUTH_API_TIMEOUT=15
+AUTH_API_DEBUG=false
+AUTH_API_STORAGE_LOG_FILE=curl.log
+
+# SANCTUM
+SANCTUM_STATEFUL_DOMAINS=roomz.localhost
+SPA_URL=http://roomz.localhost
+SESSION_DOMAIN=roomz.localhost
+
 # APP
 RESERVATION_GENERAL_OPEN_TIME="09:00"
 RESERVATION_GENERAL_CLOSE_TIME="22:00"
