--- a/composer.json
+++ b/composer.json
@@ -5,13 +5,15 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
-        "php": "^8.0.2",
+        "php": "^8.1",
         "binarycabin/laravel-uuid": "^1.0",
         "guzzlehttp/guzzle": "^7.2",
-        "laravel/fortify": "^1.13",
+        "inertiajs/inertia-laravel": "^0.6.9",
+        "ixudra/curl": "^6.22",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "vyuldashev/xml-to-array": "^1.1"
     },
     "require-dev": {
         "doctrine/dbal": "^3.4",
