--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@vue/compiler-sfc": "^3.2.47",
         "autoprefixer": "^10.4.8",
         "axios": "^0.27",
         "laravel-vite-plugin": "^0.6.0",
-        "lodash": "^4.17.19",
+        "lodash": "^4.17.21",
         "postcss": "^8.4.16",
         "tailwindcss": "^3.1.8",
         "vite": "^3.0.0"
@@ -20,9 +21,14 @@
         "@fullcalendar/resource-timegrid": "^5.11.3",
         "@fullcalendar/resource-timeline": "^5.11.3",
         "@fullcalendar/vue3": "^5.11.2",
+        "@headlessui/vue": "^1.7.0",
+        "@inertiajs/progress": "^0.2.7",
+        "@inertiajs/vue3": "^1.0.2",
         "@vitejs/plugin-vue": "^3.0.3",
         "dayjs": "^1.11.5",
+        "mitt": "^3.0.0",
         "vue": "^3.2.36",
+        "vue-final-modal": "^3.4.4",
         "vue-loader": "^17.0.0"
     }
 }
