--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@vitejs/plugin-vue": "^3.0.3",
         "dayjs": "^1.11.5",
         "mitt": "^3.0.0",
+        "pinia": "^2.0.33",
         "vue": "^3.2.36",
         "vue-final-modal": "^3.4.4",
         "vue-loader": "^17.0.0"
