--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "dayjs": "^1.11.5",
         "mitt": "^3.0.0",
         "pinia": "^2.0.33",
+        "pinia-plugin-persistedstate": "^3.1.0",
         "vue": "^3.2.36",
         "vue-final-modal": "^3.4.4",
         "vue-loader": "^17.0.0"
