Reusable and dynamic modals, SASS, iconset, base label component, validation messages in frontend

--- a/.env.example
+++ b/.env.example
@@ -25,6 +25,17 @@ AUTH_API_TIMEOUT=15
 AUTH_API_DEBUG=false
 AUTH_API_STORAGE_LOG_FILE=curl.log
 
+# TEST ACCOUNTS
+ADMIN_USER=admin
+ADMIN_PASSWORD=admin
+ADMIN_EMAIL=admin@example.org
+TEST_USER_01=test1
+TEST_USER_01_PASSWORD=test1
+TEST_USER_01_EMAIL=test1@example.org
+TEST_USER_02=test2
+TEST_USER_02_PASSWORD=test2
+TEST_USER_02_EMAIL=test2@example.org
+
 # SANCTUM
 SANCTUM_STATEFUL_DOMAINS=roomz.localhost
 SPA_URL=http://roomz.localhost
