--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
         "laravel-vite-plugin": "^0.6.0",
         "lodash": "^4.17.21",
         "postcss": "^8.4.16",
+        "sass": "^1.62.0",
         "tailwindcss": "^3.1.8",
+        "typescript": "^5.0.4",
         "vite": "^3.0.0"
     },
     "dependencies": {
@@ -24,7 +26,9 @@
         "@headlessui/vue": "^1.7.0",
         "@inertiajs/progress": "^0.2.7",
         "@inertiajs/vue3": "^1.0.2",
+        "@tailwindcss/typography": "^0.5.9",
         "@vitejs/plugin-vue": "^3.0.3",
+        "daisyui": "^2.51.5",
         "dayjs": "^1.11.5",
         "mitt": "^3.0.0",
         "pinia": "^2.0.33",
