--- a/package.json
+++ b/package.json
@@ -28,13 +28,12 @@
         "@inertiajs/vue3": "^1.0.2",
         "@tailwindcss/typography": "^0.5.9",
         "@vitejs/plugin-vue": "^3.0.3",
-        "daisyui": "^2.51.5",
         "dayjs": "^1.11.5",
+        "laravel-echo": "^1.15.1",
         "mitt": "^3.0.0",
         "pinia": "^2.0.33",
         "pinia-plugin-persistedstate": "^3.1.0",
         "vue": "^3.2.36",
-        "vue-final-modal": "^3.4.4",
         "vue-loader": "^17.0.0"
     }
 }
