--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
+        "tightenco/ziggy": "^1.5",
         "vyuldashev/xml-to-array": "^1.1"
     },
     "require-dev": {
