--- a/package.json
+++ b/package.json
@@ -28,12 +28,16 @@
         "@inertiajs/vue3": "^1.0.2",
         "@tailwindcss/typography": "^0.5.9",
         "@vitejs/plugin-vue": "^3.0.3",
-        "dayjs": "^1.11.5",
+        "daisyui": "^2.51.6",
+        "dayjs": "^1.11.7",
         "laravel-echo": "^1.15.1",
         "mitt": "^3.0.0",
         "pinia": "^2.0.33",
         "pinia-plugin-persistedstate": "^3.1.0",
+        "pusher-js": "^8.0.2",
         "vue": "^3.2.36",
-        "vue-loader": "^17.0.0"
+        "vue-loader": "^17.0.0",
+        "vue-select": "^4.0.0-beta.6",
+        "vue-select-3": "^1.0.1"
     }
 }
