--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@vitejs/plugin-vue": "^3.0.3",
         "daisyui": "^2.51.6",
         "dayjs": "^1.11.7",
+        "flowbite": "^1.6.5",
         "laravel-echo": "^1.15.1",
         "mitt": "^3.0.0",
         "pinia": "^2.0.33",
