[#11] Close Modal when clicked outside

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,10 @@
         "isolatedModules": true,
         "noEmit": true,
         "allowJs": true,
+        "paths": {
+            "@/*": [
+                "./resources/js/*"
+            ],
+        }
     }
 }
