--- a/package.json
+++ b/package.json
@@ -5,9 +5,14 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "^5.59.5",
+        "@typescript-eslint/parser": "^5.59.5",
         "@vue/compiler-sfc": "^3.2.47",
         "autoprefixer": "^10.4.8",
         "axios": "^0.27",
+        "eslint": "^8.40.0",
+        "eslint-config-prettier": "^8.8.0",
+        "eslint-plugin-vue": "^9.12.0",
         "laravel-vite-plugin": "^0.6.0",
         "lodash": "^4.17.21",
         "postcss": "^8.4.16",
