--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,5 +12,9 @@
     "parser": "vue-eslint-parser",
     "parserOptions": {
         "parser": "@typescript-eslint/parser"
+    },
+    "globals": {
+        "axios": "readonly",
+        "Echo": "readonly"
     }
 }
