--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,3 +1,8 @@
 {
-
+    "importOrder": [
+        "^@/(.*)$",
+        "<THIRD_PARTY_MODULES>"
+    ],
+    "importOrderSeparation": true,
+    "importOrderSortSpecifiers": true
 }
