--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@trivago/prettier-plugin-sort-imports": "^4.1.1",
         "@typescript-eslint/eslint-plugin": "^5.59.5",
         "@typescript-eslint/parser": "^5.59.5",
         "@vue/compiler-sfc": "^3.2.47",
@@ -16,6 +17,7 @@
         "laravel-vite-plugin": "^0.6.0",
         "lodash": "^4.17.21",
         "postcss": "^8.4.16",
+        "prettier": "^2.8.8",
         "sass": "^1.62.0",
         "tailwindcss": "^3.1.8",
         "typescript": "^5.0.4",
