--- a/.env.example
+++ b/.env.example
@@ -59,6 +59,7 @@ VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 # FIXME: APP
+APP_TIMEZONE="Europe/Berlin"
 RESERVATION_GENERAL_OPEN_TIME="09:00"
 RESERVATION_GENERAL_CLOSE_TIME="22:00"
 RESERVATION_WEEKLY_RESERVATION_QUOTA=5
