[#32] Clean up environment

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,26 @@
-APP_NAME=Laravel
+# GENERAL
+APP_NAME="Roomz"
+APP_VERSION="1.0"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+
+# CONNECTION
+APP_SCHEME=http
+APP_HOST=localhost
+APP_PORT=8000
+APP_URL=${APP_SCHEME}://${APP_HOST}:${APP_PORT}
+
+PUSHER_HOST=127.0.0.1
+PUSHER_PORT=6001
+PUSHER_SCHEME=http
+
+VITE_API_URL=${APP_URL}
+# if not proxy use pusher path, otherwise not
+# if using proxy, use 80/443, otherwise PUSHER_PORT
+VITE_PUSHER_HOST="${PUSHER_HOST}"
+VITE_PUSHER_PORT="${PUSHER_PORT}"
+VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 
 # LOGGING
 LOG_CHANNEL=stack
@@ -13,45 +31,34 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=roomz
+DB_USERNAME=roomz
+DB_PASSWORD=keepMeSe5r3t!
 
 # AUTH
 AUTH_METHOD=alma
-AUTH_API_ENDPOINT=https://www.google.de
-#AUTH_API_ENDPOINT=https://httpbin.org/post
+AUTH_API_ENDPOINT=https://httpbin.org/post
 AUTH_API_TIMEOUT=15
 AUTH_API_DEBUG=false
 AUTH_API_STORAGE_LOG_FILE=curl.log
 
-# TEST ACCOUNTS
-ADMIN_USER=admin
-ADMIN_PASSWORD=admin
-ADMIN_EMAIL=admin@example.org
-TEST_USER_01=test1
-TEST_USER_01_PASSWORD=test1
-TEST_USER_01_EMAIL=test1@example.org
-TEST_USER_02=test2
-TEST_USER_02_PASSWORD=test2
-TEST_USER_02_EMAIL=test2@example.org
-
 # SANCTUM
-SANCTUM_STATEFUL_DOMAINS=roomz.localhost
-SPA_URL=http://roomz.localhost
-SESSION_DOMAIN=roomz.localhost
+SANCTUM_STATEFUL_DOMAINS=${APP_HOST}
+SPA_URL=${APP_URL}
+SESSION_DOMAIN=${APP_HOST}
+SESSION_DRIVER=file
+SESSION_LIFETIME=120
 
 # BROADCASTING
 BROADCAST_DRIVER=pusher
 PUSHER_APP_ID=local
 PUSHER_APP_KEY=local
 PUSHER_APP_SECRET=local
-PUSHER_HOST=127.0.0.1
-PUSHER_PORT=6001
-PUSHER_SCHEME=http
 PUSHER_APP_CLUSTER=mt1
+VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
+VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-# APP
+# FIXME: APP
 RESERVATION_GENERAL_OPEN_TIME="09:00"
 RESERVATION_GENERAL_CLOSE_TIME="22:00"
 RESERVATION_WEEKLY_RESERVATION_QUOTA=5
@@ -68,33 +75,11 @@ USER_SUSPENSION_DAYS=3
 DATE_FORMAT="d.m.Y"
 TIME_FORMAT="H:i"
 AUTH_PRETEND=false
-AUTH_ENDPOINT="https://path/to/auth/endpoint"
-TEST_USER_NAME=MeUser
-TEST_USER_PASSWORD=iAmSecret
-MODAL_EFFECT="fall" # See https://postare.github.io/bulma-modal-fx/
-
-# For usage in JS:
-MIX_APP_NAME=${APP_NAME}
-MIX_APP_URL=${APP_URL}
-MIX_RESERVATION_GENERAL_OPEN_TIME=${RESERVATION_GENERAL_OPEN_TIME}
-MIX_RESERVATION_GENERAL_CLOSE_TIME=${RESERVATION_GENERAL_CLOSE_TIME}
-MIX_RESERVATION_DAILY_HOUR_QUOTA=${RESERVATION_DAILY_HOUR_QUOTA}
-MIX_RESERVATION_BLOCK_HOUR_QUOTA=${RESERVATION_BLOCK_HOUR_QUOTA}
-MIX_RESERVATION_DATE_FORMAT=${RESERVATION_DATE_FORMAT}
-MIX_RESERVATION_TIME_FORMAT=${RESERVATION_TIME_FORMAT}
-MIX_RESERVATION_TIMESLOT_LENGTH=${RESERVATION_TIMESLOT_LENGTH}
-MIX_RESERVATION_WEEKS_IN_ADVANCE=${RESERVATION_WEEKS_IN_ADVANCE}
-MIX_MODAL_EFFECT=${MODAL_EFFECT}
-
-# SESSIOMS
-SESSION_DRIVER=file
-SESSION_LIFETIME=120
-SESSION_DOMAIN=.localhost
 
 # MAIL
 MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
+MAIL_HOST=smtp.mailtrap.io
+MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
@@ -106,20 +91,13 @@ CACHE_DRIVER=file
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
 
-MEMCACHED_HOST=127.0.0.1
-
-REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
-REDIS_PORT=6379
-
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
-AWS_USE_PATH_STYLE_ENDPOINT=false
-
-VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
-VITE_PUSHER_HOST="${PUSHER_HOST}"
-VITE_PUSHER_PORT="${PUSHER_PORT}"
-VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
-VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+# TEST ACCOUNTS
+ADMIN_USER=admin
+ADMIN_PASSWORD=admin
+ADMIN_EMAIL=admin@example.org
+TEST_USER_01=test1
+TEST_USER_01_PASSWORD=test1
+TEST_USER_01_EMAIL=test1@example.org
+TEST_USER_02=test2
+TEST_USER_02_PASSWORD=test2
+TEST_USER_02_EMAIL=test2@example.org
