[#52] Settings to database

--- a/.env.example
+++ b/.env.example
@@ -58,7 +58,23 @@ PUSHER_APP_CLUSTER=mt1
 VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-# FIXME: APP
+# APP
+DEFAULT_TIMEZONE="Europe/Berlin"
+DEFAULT_START_TIME_SLOT="09:00"
+DEFAULT_END_TIME_SLOT="22:00"
+DEFAULT_QUOTA_WEEKLY_HAPPENINGS=5
+DEFAULT_QUOTA_DAILY_HOURS=4
+DEFAULT_QUOTA_WEEKLY_HOURS=12
+DEFAULT_QUOTA_HAPPENING_BLOCK_HOURS=4
+DEFAULT_DATE_FORMAT="DD.MM.YYYY"
+DEFAULT_TIME_FORMAT="H:mm"
+DEFAULT_TIMESLOT_LENGTH="00:30"
+DEFAULT_WEEKS_IN_ADVANCE=2
+#DEFAULT_CLEANUP_INTERVAL="01:00"
+#USER_SUSPENSION_ENABLED=true
+#USER_SUSPENSION_DAYS=3
+
+
 APP_TIMEZONE="Europe/Berlin"
 RESERVATION_GENERAL_OPEN_TIME="09:00"
 RESERVATION_GENERAL_CLOSE_TIME="22:00"
