[#54] Introduce scope for institutions

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,7 @@ PUSHER_HOST=127.0.0.1
 PUSHER_PORT=6001
 PUSHER_SCHEME=http
 
+VITE_APP_NAME=${APP_NAME}
 VITE_API_URL=${APP_URL}
 # if not proxy use pusher path, otherwise not
 # if using proxy, use 80/443, otherwise PUSHER_PORT
