[#53] Check code for usage of legacy env variables

--- a/.env.example
+++ b/.env.example
@@ -68,30 +68,27 @@ DEFAULT_QUOTA_DAILY_HOURS=4
 DEFAULT_QUOTA_WEEKLY_HOURS=12
 DEFAULT_QUOTA_HAPPENING_BLOCK_HOURS=4
 DEFAULT_DATE_FORMAT="DD.MM.YYYY"
-DEFAULT_TIME_FORMAT="H:mm"
+DEFAULT_TIME_FORMAT="H:i"
 DEFAULT_TIMESLOT_LENGTH="00:30"
 DEFAULT_WEEKS_IN_ADVANCE=2
 #DEFAULT_CLEANUP_INTERVAL="01:00"
-#USER_SUSPENSION_ENABLED=true
-#USER_SUSPENSION_DAYS=3
-
 
 APP_TIMEZONE="Europe/Berlin"
-RESERVATION_GENERAL_OPEN_TIME="09:00"
-RESERVATION_GENERAL_CLOSE_TIME="22:00"
-RESERVATION_WEEKLY_RESERVATION_QUOTA=5
-RESERVATION_DAILY_HOUR_QUOTA=4
-RESERVATION_WEEKLY_HOUR_QUOTA=12
-RESERVATION_BLOCK_HOUR_QUOTA=4
-RESERVATION_DATE_FORMAT="DD.MM.YYYY"
-RESERVATION_TIME_FORMAT="H:mm"
-RESERVATION_TIMESLOT_LENGTH="00:30"
-RESERVATION_WEEKS_IN_ADVANCE=2
-RESERVATION_CLEANUP_INTERVAL="01:00"
+# RESERVATION_GENERAL_OPEN_TIME="09:00"
+# RESERVATION_GENERAL_CLOSE_TIME="22:00"
+# RESERVATION_WEEKLY_RESERVATION_QUOTA=5
+# RESERVATION_DAILY_HOUR_QUOTA=4
+# RESERVATION_WEEKLY_HOUR_QUOTA=12
+# RESERVATION_BLOCK_HOUR_QUOTA=4
+# RESERVATION_DATE_FORMAT="DD.MM.YYYY"
+# RESERVATION_TIME_FORMAT="H:mm"
+# RESERVATION_TIMESLOT_LENGTH="00:30"
+# RESERVATION_WEEKS_IN_ADVANCE=2
+# RESERVATION_CLEANUP_INTERVAL="01:00"
 USER_SUSPENSION_ENABLED=true
 USER_SUSPENSION_DAYS=3
-DATE_FORMAT="d.m.Y"
-TIME_FORMAT="H:i"
+# DATE_FORMAT="d.m.Y"
+# TIME_FORMAT="H:i"
 AUTH_PRETEND=false
 
 # MAIL
