--- a/.env.example
+++ b/.env.example
@@ -36,6 +36,10 @@ DB_DATABASE=roomz
 DB_USERNAME=roomz
 DB_PASSWORD=keepMeSe5r3t!
 
+# DATABASE SEEDS
+DB_SEED_EXAMPLE_INSTITUTIONS=true
+DB_SEED_TUB_INSTITUTIONS=true
+
 # AUTH
 AUTH_METHOD=alma
 AUTH_API_ENDPOINT=https://httpbin.org/post
