--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "barryvdh/laravel-ide-helper": "^2.13",
         "doctrine/dbal": "^3.4",
         "fakerphp/faker": "^1.9.1",
+        "laravel-lang/common": "^3.1",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.0.1",
         "laravel/telescope": "^4.9",
