--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "flowbite": "^1.6.5",
         "flowbite-datepicker": "^1.2.2",
         "laravel-echo": "^1.15.1",
+        "laravel-vue-i18n": "^2.6.1",
         "mitt": "^3.0.0",
         "pinia": "^2.0.33",
         "pinia-plugin-persistedstate": "^3.1.0",
