[#88] Add language switcher

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ APP_VERSION="1.0"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
+APP_LOCALE="de"
 
 # CONNECTION
 APP_SCHEME=http
@@ -64,6 +65,7 @@ VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 # APP
+DEFAULT_LOCALE="${APP_LOCALE}"
 DEFAULT_TIMEZONE="Europe/Berlin"
 DEFAULT_START_TIME_SLOT="09:00"
 DEFAULT_END_TIME_SLOT="22:00"
