--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.1",
         "binarycabin/laravel-uuid": "^1.0",
+        "bkwld/cloner": "^3.11",
         "guzzlehttp/guzzle": "^7.2",
         "inertiajs/inertia-laravel": "^0.6.9",
         "ixudra/curl": "^6.22",
