[#132] Schedule for removing unverified happenings configurable per institution

--- a/.env.example
+++ b/.env.example
@@ -77,7 +77,7 @@ DEFAULT_DATE_FORMAT="DD.MM.YYYY"
 DEFAULT_TIME_FORMAT="H:i"
 DEFAULT_TIMESLOT_LENGTH="00:30"
 DEFAULT_WEEKS_IN_ADVANCE=2
-#DEFAULT_CLEANUP_INTERVAL="01:00"
+DEFAULT_CLEANUP_INTERVAL=":01:00"
 
 APP_TIMEZONE="Europe/Berlin"
 # RESERVATION_GENERAL_OPEN_TIME="09:00"
