--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
         "laravel-vite-plugin": "^0.6.0",
         "lodash": "^4.17.21",
         "postcss": "^8.4.16",
+        "postcss-html": "^1.5.0",
         "prettier": "^3.0.3",
         "sass": "^1.62.0",
         "stylelint": "^15.10.3",
         "stylelint-config-standard-scss": "^11.0.0",
+        "stylelint-config-standard-vue": "^1.0.0",
         "stylelint-prettier": "^4.0.2",
         "tailwindcss": "^3.1.8",
         "typescript": "^5.0.4",
