--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,6 +1,12 @@
 {
+    "plugins": [
+        "@trivago/prettier-plugin-sort-imports"
+    ],
     "importOrder": [
+        "^@fullcalendar/(.*)$",
         "^@/(.*)$",
+        "^../(.*)$",
+        "^./(.*)$",
         "<THIRD_PARTY_MODULES>"
     ],
     "importOrderSeparation": true,
