--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -2,5 +2,8 @@
     "extends": [
         "stylelint-config-standard-scss",
         "stylelint-config-standard-vue"
-    ]
+    ],
+    "rules": {
+        "media-feature-range-notation": "prefix"
+    }
 }
