[#150] Delete users with no happenings after x days

--- a/.env.example
+++ b/.env.example
@@ -93,6 +93,7 @@ APP_TIMEZONE="Europe/Berlin"
 # RESERVATION_CLEANUP_INTERVAL="01:00"
 USER_SUSPENSION_ENABLED=true
 USER_SUSPENSION_DAYS=3
+USER_CLEANUP_DAYS="14"
 # DATE_FORMAT="d.m.Y"
 # TIME_FORMAT="H:i"
 AUTH_PRETEND=false
