[MAINTENANCE] set skipLibCheck in tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,10 +7,11 @@
         "isolatedModules": true,
         "noEmit": true,
         "allowJs": true,
+        "skipLibCheck": true,
         "paths": {
             "@/*": [
                 "./resources/js/*"
-            ],
+            ]
         }
     }
 }
