[#187] Duplicated happening broadcasts when logged in via start page

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -4,6 +4,7 @@
         "stylelint-config-standard-vue"
     ],
     "rules": {
-        "media-feature-range-notation": "prefix"
+        "media-feature-range-notation": "prefix",
+        "color-hex-length": "long"
     }
 }
