--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -5,6 +5,7 @@
     ],
     "rules": {
         "media-feature-range-notation": "prefix",
-        "color-hex-length": "long"
+        "color-hex-length": "long",
+        "shorthand-property-no-redundant-values": false
     }
 }
