[#175] Fix burger menu in mobile navigation

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -6,6 +6,7 @@
     "rules": {
         "media-feature-range-notation": "prefix",
         "color-hex-length": "long",
-        "shorthand-property-no-redundant-values": null
+        "shorthand-property-no-redundant-values": null,
+        "color-hex-case": "upper"
     }
 }
