--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,5 +16,15 @@
     "globals": {
         "axios": "readonly",
         "Echo": "readonly"
-    }
+    },
+    "overrides": [
+        {
+            "files": [
+                "*.vue"
+            ],
+            "rules": {
+                "vue/multi-word-component-names": "off"
+            }
+        }
+    ]
 }
