--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
     "private": true,
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "prepare": "husky install"
     },
     "devDependencies": {
         "@trivago/prettier-plugin-sort-imports": "^4.2.0",
@@ -13,6 +14,8 @@
         "eslint": "^8.40.0",
         "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-vue": "^9.12.0",
+        "husky": "^8.0.3",
+        "lint-staged": "^14.0.1",
         "lodash": "^4.17.21",
         "postcss": "^8.4.16",
         "postcss-html": "^1.5.0",
