[#200] Remove calls to env() from non-config files

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_LOCALE="de"
+APP_TIMEZONE="Europe/Berlin"
 
 # CONNECTION
 APP_SCHEME=http
@@ -79,24 +80,10 @@ DEFAULT_TIMESLOT_LENGTH="00:30"
 DEFAULT_WEEKS_IN_ADVANCE=2
 DEFAULT_CLEANUP_INTERVAL=":01:00"
 
-APP_TIMEZONE="Europe/Berlin"
-# RESERVATION_GENERAL_OPEN_TIME="09:00"
-# RESERVATION_GENERAL_CLOSE_TIME="22:00"
-# RESERVATION_WEEKLY_RESERVATION_QUOTA=5
-# RESERVATION_DAILY_HOUR_QUOTA=4
-# RESERVATION_WEEKLY_HOUR_QUOTA=12
-# RESERVATION_BLOCK_HOUR_QUOTA=4
-# RESERVATION_DATE_FORMAT="DD.MM.YYYY"
-# RESERVATION_TIME_FORMAT="H:mm"
-# RESERVATION_TIMESLOT_LENGTH="00:30"
-# RESERVATION_WEEKS_IN_ADVANCE=2
-# RESERVATION_CLEANUP_INTERVAL="01:00"
+# USERS
 USER_SUSPENSION_ENABLED=true
 USER_SUSPENSION_DAYS=3
 USER_CLEANUP_DAYS="14"
-# DATE_FORMAT="d.m.Y"
-# TIME_FORMAT="H:i"
-AUTH_PRETEND=false
 
 # MAIL
 MAIL_MAILER=smtp
