--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
         "pinia": "^2.0.33",
         "pinia-plugin-persistedstate": "^3.1.0",
         "pusher-js": "^8.0.2",
+        "remixicon": "^3.5.0",
         "vue": "^3.2.36",
         "vue-chart-3": "^3.1.8",
         "vue-loader": "^17.0.0",
