--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "inertiajs/inertia-laravel": "^0.6.9",
         "ixudra/curl": "^6.22",
         "laravel/framework": "^10.0",
+        "laravel/prompts": "^0.1.8",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.7",
         "pusher/pusher-php-server": "^7.2",
