[#314] Update config: optional test accounts and streamlining default values

--- a/.env.example
+++ b/.env.example
@@ -83,7 +83,10 @@ DEFAULT_CLEANUP_INTERVAL=":01:00"
 # USERS
 USER_SUSPENSION_ENABLED=true
 USER_SUSPENSION_DAYS=3
-USER_CLEANUP_DAYS="14"
+USER_CLEANUP_DAYS=30
+
+# HAPPENINGS
+HAPPENING_CLEANUP_DAYS=30
 
 # MAIL
 MAIL_MAILER=smtp
@@ -101,6 +104,7 @@ FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
 
 # TEST ACCOUNTS
+IS_TEST_ACCOUNTS_ENABLED=false
 ADMIN_USER=admin
 ADMIN_PASSWORD=admin
 ADMIN_EMAIL=admin@example.org
