--- a/.env.example
+++ b/.env.example
@@ -28,7 +28,7 @@ VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 # LOGGING
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
-LOG_LEVEL=debug
+LOG_LEVEL=warning
 
 # DATABASE
 DB_CONNECTION=mysql
