[#323] Use redis as queue driver

--- a/.env.example
+++ b/.env.example
@@ -65,6 +65,12 @@ PUSHER_APP_CLUSTER=mt1
 VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
+# REDIS
+REDIS_HOST=127.0.0.1
+REDIS_PORT=6379
+REDIS_PASSWORD=
+REDIS_DB=roomz
+
 # APP
 DEFAULT_LOCALE="${APP_LOCALE}"
 DEFAULT_TIMEZONE="Europe/Berlin"
@@ -101,7 +107,7 @@ MAIL_FROM_NAME="${APP_NAME}"
 # MISC
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=redis
 
 # TEST ACCOUNTS
 IS_TEST_ACCOUNTS_ENABLED=false
