[#329] Use redis as session driver

--- a/.env.example
+++ b/.env.example
@@ -108,6 +108,7 @@ MAIL_FROM_NAME="${APP_NAME}"
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=redis
+SESSION_DRIVER=redis
 
 # TEST ACCOUNTS
 IS_TEST_ACCOUNTS_ENABLED=false
