[MAINTENANCE] Update .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # GENERAL
 APP_NAME="Roomz"
 APP_VERSION="1.0"
-APP_ENV=local
+APP_ENV=local # local | production
 APP_KEY=
 APP_DEBUG=true
 APP_LOCALE="de"
@@ -19,16 +19,15 @@ PUSHER_SCHEME=http
 
 VITE_APP_NAME=${APP_NAME}
 VITE_API_URL=${APP_URL}
-# if not proxy use pusher path, otherwise not
-# if using proxy, use 80/443, otherwise PUSHER_PORT
-VITE_PUSHER_HOST="${PUSHER_HOST}"
-VITE_PUSHER_PORT="${PUSHER_PORT}"
-VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
+
+VITE_PUSHER_HOST="${PUSHER_HOST}" # ${PUSHER_HOST} | ${APP_HOST}
+VITE_PUSHER_PORT="${PUSHER_PORT}" # ${PUSHER_PORT} | ${APP_PORT}
+VITE_PUSHER_SCHEME="${PUSHER_SCHEME}" # ${PUSHER_SCHEME} | ${APP_SCHEME}
 
 # LOGGING
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
-LOG_LEVEL=warning
+LOG_LEVEL=debug # debug | info | notice | warning | error | critical | alert | emergency
 
 # DATABASE
 DB_CONNECTION=mysql
@@ -36,7 +35,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=roomz
 DB_USERNAME=roomz
-DB_PASSWORD=keepMeSe5r3t!
+DB_PASSWORD=keepMeSe5r3t! # Change this
 
 # DATABASE SEEDS
 DB_SEED_EXAMPLE_INSTITUTIONS=true
@@ -44,7 +43,7 @@ DB_SEED_TUB_INSTITUTIONS=true
 
 # AUTH
 AUTH_METHOD=alma
-AUTH_API_ENDPOINT=https://httpbin.org/post
+AUTH_API_ENDPOINT=https://httpbin.org/post # Change this
 AUTH_API_TIMEOUT=15
 AUTH_API_DEBUG=false
 AUTH_API_STORAGE_LOG_FILE=curl.log
@@ -53,23 +52,31 @@ AUTH_API_STORAGE_LOG_FILE=curl.log
 SANCTUM_STATEFUL_DOMAINS=${APP_HOST}
 SPA_URL=${APP_URL}
 SESSION_DOMAIN=${APP_HOST}
-SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
 # BROADCASTING
 BROADCAST_DRIVER=pusher
-PUSHER_APP_ID=local
-PUSHER_APP_KEY=local
-PUSHER_APP_SECRET=local
 PUSHER_APP_CLUSTER=mt1
+
+PUSHER_APP_ID=roomz
+PUSHER_APP_KEY=ws
+PUSHER_APP_SECRET=s3Cr3T! # Change this
+
+SOKETI_DEBUG=true
+
+# Must be the same as PUSHER_APP_{ID,KEY,SECRET}.
+SOKETI_DEFAULT_APP_ID=roomz
+SOKETI_DEFAULT_APP_KEY=ws
+SOKETI_DEFAULT_APP_SECRET=s3Cr3T!
+
 VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 # REDIS
 REDIS_HOST=127.0.0.1
 REDIS_PORT=6379
-REDIS_PASSWORD=
-REDIS_DB=roomz
+REDIS_PASSWORD=s3Cr3T! # Change this
+REDIS_DB=0
 
 # APP
 DEFAULT_LOCALE="${APP_LOCALE}"
@@ -87,7 +94,7 @@ DEFAULT_WEEKS_IN_ADVANCE=2
 DEFAULT_CLEANUP_INTERVAL=":01:00"
 
 # USERS
-USER_SUSPENSION_ENABLED=true
+USER_SUSPENSION_ENABLED=false
 USER_SUSPENSION_DAYS=3
 USER_CLEANUP_DAYS=30
 
@@ -95,9 +102,9 @@ USER_CLEANUP_DAYS=30
 HAPPENING_CLEANUP_DAYS=30
 
 # MAIL
-MAIL_MAILER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
+MAIL_MAILER=smtp # | log
+MAIL_HOST=localhost
+MAIL_PORT=1025
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
@@ -105,13 +112,14 @@ MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
 # MISC
-CACHE_DRIVER=file
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=redis
-SESSION_DRIVER=redis
+CACHE_DRIVER=redis # | file
+SESSION_DRIVER=redis # | file
+QUEUE_CONNECTION=redis # | sync
 
-# TEST ACCOUNTS
+# TESTING ACCOUNTS
 IS_TEST_ACCOUNTS_ENABLED=false
+
 ADMIN_USER=admin
 ADMIN_PASSWORD=admin
 ADMIN_EMAIL=admin@example.org
