--- a/.env.example
+++ b/.env.example
@@ -24,6 +24,8 @@ VITE_PUSHER_HOST="${PUSHER_HOST}" # ${PUSHER_HOST} | ${APP_HOST}
 VITE_PUSHER_PORT="${PUSHER_PORT}" # ${PUSHER_PORT} | ${APP_PORT}
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}" # ${PUSHER_SCHEME} | ${APP_SCHEME}
 
+VITE_LONG_PRESS_DELAY=500
+
 # LOGGING
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
