--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "ixudra/curl": "^6.22",
         "laravel/framework": "^10.0",
         "laravel/prompts": "^0.1.8",
+        "laravel/pulse": "^1.0@beta",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.7",
         "pusher/pusher-php-server": "^7.2",
