[#415] Add setting to enable happening labels

--- a/.env.example
+++ b/.env.example
@@ -94,6 +94,7 @@ DEFAULT_TIME_FORMAT="H:i"
 DEFAULT_TIMESLOT_LENGTH="00:30"
 DEFAULT_WEEKS_IN_ADVANCE=2
 DEFAULT_CLEANUP_INTERVAL=":01:00"
+DEFAULT_IS_LABELS_ENABLED=false
 
 # USERS
 USER_SUSPENSION_ENABLED=false
