[#378] Add ip access restriction for institutions

--- a/.env.example
+++ b/.env.example
@@ -95,6 +95,7 @@ DEFAULT_TIMESLOT_LENGTH="00:30"
 DEFAULT_WEEKS_IN_ADVANCE=2
 DEFAULT_CLEANUP_INTERVAL=":01:00"
 DEFAULT_IS_LABEL_ENABLED=false
+DEFAULT_ALLOWED_IPS="0.0.0.0/0"
 
 # USERS
 USER_SUSPENSION_ENABLED=false
