[#426] Upgrade to Laravel 11

--- a/composer.json
+++ b/composer.json
@@ -5,19 +5,19 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
-        "php": "^8.1",
+        "php": "^8.2",
         "binarycabin/laravel-uuid": "^1.0",
         "bkwld/cloner": "^3.11",
         "cybercog/laravel-ban": "^4.8",
-        "doctrine/dbal": "^3.6",
         "fakerphp/faker": "^1.23",
         "guzzlehttp/guzzle": "^7.2",
-        "inertiajs/inertia-laravel": "^0.6.9",
+        "inertiajs/inertia-laravel": "^1.0",
         "ixudra/curl": "^6.22",
-        "laravel/framework": "^10.0",
+        "laravel/framework": "^11.0",
         "laravel/prompts": "^0.1.8",
         "laravel/pulse": "^1.0@beta",
-        "laravel/sanctum": "^3.2",
+        "laravel/reverb": "@beta",
+        "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.7",
         "pusher/pusher-php-server": "^7.2",
         "spatie/laravel-translatable": "^6.5",
@@ -25,13 +25,12 @@
         "vyuldashev/xml-to-array": "^1.1"
     },
     "require-dev": {
-        "barryvdh/laravel-ide-helper": "^2.13",
         "laravel-lang/common": "^3.1",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.0.1",
-        "laravel/telescope": "^4.16",
+        "laravel/telescope": "^5.0",
         "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^7.0",
+        "nunomaduro/collision": "^8.1",
         "phpunit/phpunit": "^10.0",
         "spatie/laravel-ignition": "^2.0",
         "squizlabs/php_codesniffer": "^3.7"
