--- a/.env.example
+++ b/.env.example
@@ -13,16 +13,19 @@ APP_HOST=localhost
 APP_PORT=8000
 APP_URL=${APP_SCHEME}://${APP_HOST}:${APP_PORT}
 
-PUSHER_HOST=127.0.0.1
-PUSHER_PORT=6001
-PUSHER_SCHEME=http
+REVERB_HOST=127.0.0.1
+REVERB_PORT=6001
+REVERB_SCHEME=http
+
+REVERB_SERVER_HOST=${REVERB_HOST}
+REVERB_SERVER_PORT=${REVERB_PORT}
 
 VITE_APP_NAME=${APP_NAME}
 VITE_API_URL=${APP_URL}
 
-VITE_PUSHER_HOST="${PUSHER_HOST}" # ${PUSHER_HOST} | ${APP_HOST}
-VITE_PUSHER_PORT="${PUSHER_PORT}" # ${PUSHER_PORT} | ${APP_PORT}
-VITE_PUSHER_SCHEME="${PUSHER_SCHEME}" # ${PUSHER_SCHEME} | ${APP_SCHEME}
+VITE_REVERB_HOST="${APP_HOST}" # ${REVERB_HOST} | ${APP_HOST}
+VITE_REVERB_PORT="${APP_PORT}" # ${REVERB_PORT} | ${APP_PORT}
+VITE_REVERB_SCHEME="${APP_SCHEME}" # ${REVERB_SCHEME} | ${APP_SCHEME}
 
 VITE_LONG_PRESS_DELAY=500
 
@@ -32,7 +35,7 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug # debug | info | notice | warning | error | critical | alert | emergency
 
 # DATABASE
-DB_CONNECTION=mysql
+DB_CONNECTION=mariadb
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=roomz
@@ -57,22 +60,13 @@ SESSION_DOMAIN=${APP_HOST}
 SESSION_LIFETIME=120
 
 # BROADCASTING
-BROADCAST_DRIVER=pusher
-PUSHER_APP_CLUSTER=mt1
+BROADCAST_CONNECTION=reverb
 
-PUSHER_APP_ID=roomz
-PUSHER_APP_KEY=ws
-PUSHER_APP_SECRET=s3Cr3T! # Change this
+REVERB_APP_ID=roomz
+REVERB_APP_KEY=ws
+REVERB_APP_SECRET=s3Cr3T!
 
-SOKETI_DEBUG=true
-
-# Must be the same as PUSHER_APP_{ID,KEY,SECRET}.
-SOKETI_DEFAULT_APP_ID=roomz
-SOKETI_DEFAULT_APP_KEY=ws
-SOKETI_DEFAULT_APP_SECRET=s3Cr3T!
-
-VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
-VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+VITE_REVERB_APP_KEY="${REVERB_APP_KEY}"
 
 # REDIS
 REDIS_HOST=127.0.0.1
