--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
         "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-vue": "^9.12.0",
         "husky": "^8.0.3",
+        "laravel-echo": "^1.16.1",
         "lint-staged": "^14.0.1",
         "lodash": "^4.17.21",
         "postcss": "^8.4.16",
         "postcss-html": "^1.5.0",
         "prettier": "^3.0.3",
+        "pusher-js": "^8.4.0-rc2",
         "sass": "^1.62.0",
         "stylelint": "^15.10.3",
         "stylelint-config-standard-scss": "^11.0.0",
@@ -39,7 +41,6 @@
         "@headlessui/vue": "^1.7.0",
         "@inertiajs/progress": "^0.2.7",
         "@inertiajs/vue3": "^1.0.2",
-        "@soketi/soketi": "^1.5.0",
         "@tailwindcss/typography": "^0.5.9",
         "@vitejs/plugin-vue": "^4.3.4",
         "autoprefixer": "^10.4.15",
@@ -47,13 +48,11 @@
         "dayjs": "^1.11.7",
         "flowbite": "^1.6.5",
         "flowbite-datepicker": "^1.2.2",
-        "laravel-echo": "^1.15.1",
         "laravel-vite-plugin": "^0.8.0",
         "laravel-vue-i18n": "^2.6.1",
         "mitt": "^3.0.0",
         "pinia": "^2.0.33",
         "pinia-plugin-persistedstate": "^3.1.0",
-        "pusher-js": "^8.0.2",
         "remixicon": "^3.5.0",
         "vue": "^3.2.36",
         "vue-chart-3": "^3.1.8",
