[#431] Use mysql database driver

--- a/.env.example
+++ b/.env.example
@@ -35,7 +35,7 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug # debug | info | notice | warning | error | critical | alert | emergency
 
 # DATABASE
-DB_CONNECTION=mariadb
+DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=roomz
