[#433] Make echo broadcast driver configurable via environment variable

--- a/.env.example
+++ b/.env.example
@@ -66,6 +66,7 @@ REVERB_APP_ID=roomz
 REVERB_APP_KEY=ws
 REVERB_APP_SECRET=s3Cr3T!
 
+VITE_BROADCAST_DRIVER="${BROADCAST_CONNECTION}"
 VITE_REVERB_APP_KEY="${REVERB_APP_KEY}"
 
 # REDIS
