[#429] Clean up config and dotenv files

--- a/.env.example
+++ b/.env.example
@@ -1,130 +1,67 @@
 # GENERAL
-APP_NAME="Roomz"
-APP_VERSION="1.0"
-APP_ENV=local # local | production
+APP_NAME=Roomz
+APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_LOCALE="de"
-APP_TIMEZONE="Europe/Berlin"
 
-# CONNECTION
 APP_SCHEME=http
 APP_HOST=localhost
 APP_PORT=8000
+
 APP_URL=${APP_SCHEME}://${APP_HOST}:${APP_PORT}
-
-REVERB_HOST=127.0.0.1
-REVERB_PORT=6001
-REVERB_SCHEME=http
-
-REVERB_SERVER_HOST=${REVERB_HOST}
-REVERB_SERVER_PORT=${REVERB_PORT}
-
-VITE_APP_NAME=${APP_NAME}
-VITE_API_URL=${APP_URL}
-
-VITE_REVERB_HOST="${APP_HOST}" # ${REVERB_HOST} | ${APP_HOST}
-VITE_REVERB_PORT="${APP_PORT}" # ${REVERB_PORT} | ${APP_PORT}
-VITE_REVERB_SCHEME="${APP_SCHEME}" # ${REVERB_SCHEME} | ${APP_SCHEME}
-
-VITE_LONG_PRESS_DELAY=500
-
-# LOGGING
-LOG_CHANNEL=stack
-LOG_DEPRECATIONS_CHANNEL=null
-LOG_LEVEL=debug # debug | info | notice | warning | error | critical | alert | emergency
-
-# DATABASE
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=roomz
-DB_USERNAME=roomz
-DB_PASSWORD=keepMeSe5r3t! # Change this
-
-# DATABASE SEEDS
-DB_SEED_EXAMPLE_INSTITUTION=false
-DB_SEED_TUB_INSTITUTIONS=false
-
-# AUTH
-AUTH_METHOD=alma
-AUTH_API_ENDPOINT=https://httpbin.org/post # Change this
-AUTH_API_TIMEOUT=15
-AUTH_API_DEBUG=false
-AUTH_API_STORAGE_LOG_FILE=curl.log
-
-# SANCTUM
-SANCTUM_STATEFUL_DOMAINS=${APP_HOST}
-SPA_URL=${APP_URL}
-SESSION_DOMAIN=${APP_HOST}
-SESSION_LIFETIME=120
 
 # BROADCASTING
 BROADCAST_CONNECTION=reverb
+
+REVERB_SCHEME=http
+REVERB_HOST=127.0.0.1
+REVERB_PORT=6001
+
+REVERB_SERVER_HOST=${REVERB_HOST}
+REVERB_SERVER_PORT=${REVERB_PORT}
 
 REVERB_APP_ID=roomz
 REVERB_APP_KEY=ws
 REVERB_APP_SECRET=s3Cr3T!
 
-VITE_BROADCAST_DRIVER="${BROADCAST_CONNECTION}"
-VITE_REVERB_APP_KEY="${REVERB_APP_KEY}"
+# FRONTEND
+VITE_APP_NAME=${APP_NAME}
+VITE_API_URL=${APP_URL}
+
+VITE_BROADCAST_DRIVER=${BROADCAST_CONNECTION}
+
+VITE_REVERB_SCHEME=${APP_SCHEME}
+VITE_REVERB_HOST=${APP_HOST}
+VITE_REVERB_PORT=${APP_PORT}
+
+VITE_REVERB_APP_KEY=${REVERB_APP_KEY}
+
+VITE_LONG_PRESS_DELAY=500
+
+# DATABASE
+DB_DATABASE=roomz
+DB_USERNAME=roomz
+DB_PASSWORD=keepMeSe5r3t!
+
+# AUTH
+AUTH_METHOD=alma
+AUTH_API_ENDPOINT=https://httpbin.org/post
 
 # REDIS
-REDIS_HOST=127.0.0.1
-REDIS_PORT=6379
-REDIS_PASSWORD=s3Cr3T! # Change this
-REDIS_DB=0
-
-# APP
-DEFAULT_LOCALE="${APP_LOCALE}"
-DEFAULT_TIMEZONE="Europe/Berlin"
-DEFAULT_START_TIME_SLOT="09:00"
-DEFAULT_END_TIME_SLOT="22:00"
-DEFAULT_QUOTA_WEEKLY_HAPPENINGS=5
-DEFAULT_QUOTA_DAILY_HOURS=4
-DEFAULT_QUOTA_WEEKLY_HOURS=12
-DEFAULT_QUOTA_HAPPENING_BLOCK_HOURS=4
-DEFAULT_DATE_FORMAT="DD.MM.YYYY"
-DEFAULT_TIME_FORMAT="H:i"
-DEFAULT_TIMESLOT_LENGTH="00:30"
-DEFAULT_WEEKS_IN_ADVANCE=2
-DEFAULT_CLEANUP_INTERVAL=":01:00"
-DEFAULT_IS_LABEL_ENABLED=false
-DEFAULT_ALLOWED_IPS="0.0.0.0/0"
-
-# USERS
-USER_SUSPENSION_ENABLED=false
-USER_SUSPENSION_DAYS=3
-USER_CLEANUP_DAYS=30
-
-# HAPPENINGS
-HAPPENING_CLEANUP_DAYS=30
+REDIS_PASSWORD=s3Cr3T!
 
 # MAIL
-MAIL_MAILER=smtp # | log
-MAIL_HOST=localhost
+MAIL_MAILER=smtp
+MAIL_HOST=127.0.0.1
 MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
 
 # MISC
-FILESYSTEM_DISK=local
-CACHE_DRIVER=redis # | file
-SESSION_DRIVER=redis # | file
-QUEUE_CONNECTION=redis # | sync
+CACHE_DRIVER=redis
+SESSION_DRIVER=redis
+QUEUE_CONNECTION=redis
 
-# TESTING ACCOUNTS
+# TEST ACCOUNTS
 IS_TEST_ACCOUNTS_ENABLED=false
 
-ADMIN_USER=admin
-ADMIN_PASSWORD=admin
-ADMIN_EMAIL=admin@example.org
-TEST_USER_01=test1
-TEST_USER_01_PASSWORD=test1
-TEST_USER_01_EMAIL=test1@example.org
-TEST_USER_02=test2
-TEST_USER_02_PASSWORD=test2
-TEST_USER_02_EMAIL=test2@example.org
+# TEST DATA
+DB_SEED_EXAMPLE_INSTITUTION=false
