[#438] Disable mailpit healthcheck

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -79,6 +79,8 @@ services:
       - 8025:8025
     volumes:
       - mailpit-data:/data
+    healthcheck:
+      disable: true
 volumes:
   caddy-config:
   caddy-data:
