[#438] Use init process for proper signal forwarding

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
     environment:
       <<: *env
     restart: unless-stopped
+    init: true
   queue-worker:
     extends: php-fpm
     command: php artisan queue:work
