--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@typescript-eslint/parser": "^5.59.5",
         "@vue/compiler-sfc": "^3.2.47",
         "axios": "^1.6.8",
+        "commitizen": "^4.3.0",
         "eslint": "^8.40.0",
         "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-vue": "^9.12.0",
