feat(authentication): add config key for login name normalization
Closes #444.

--- a/.env.example
+++ b/.env.example
@@ -47,6 +47,8 @@ DB_PASSWORD=keepMeSe5r3t!
 AUTH_METHOD=alma
 AUTH_API_ENDPOINT=https://httpbin.org/post
 
+LOGIN_NAME_NORMALIZATION_METHOD=1
+
 # REDIS
 REDIS_PASSWORD=s3Cr3T!
 
