--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,15 @@
 ---
 x-environment: &env
   DB_HOST: mariadb
-  MAIL_HOST: mailpit
   REDIS_HOST: redis
+  REDIS_PASSWORD: ""
+  CACHE_DRIVER: redis
+  SESSION_DRIVER: redis
+  QUEUE_CONNECTION: redis
+  MAIL_MAILER: mailpit
+  REVERB_SCHEME: http
   REVERB_HOST: reverb
+  REVERB_PORT: 6001
 
 services:
   php-fpm:
@@ -32,7 +38,10 @@ services:
     command: php artisan schedule:work
   reverb:
     extends: php-fpm
-    command: php artisan reverb:start --host=0.0.0.0
+    command: php artisan reverb:start
+    environment:
+      REVERB_SERVER_HOST: 0.0.0.0
+      REVERB_SERVER_PORT: 6001
   caddy:
     build:
       target: caddy
@@ -43,25 +52,22 @@ services:
       - caddy-data:/data
       - php-fpm-socket:/var/run/php
       - .docker/caddy/Caddyfile:/etc/caddy/Caddyfile
-    ports:
-      - $APP_PORT:$APP_PORT
     depends_on:
       - php-fpm
       - queue-worker
       - schedule-worker
       - reverb
     environment:
-      <<: *env
-      APP_SCHEME: $APP_SCHEME
-      APP_HOST: $APP_HOST
-      APP_PORT: $APP_PORT
+      APP_URL: ${APP_URL?}
+    ports:
+      - ${APP_PORT:-8000}:${APP_PORT:-8000}
   mariadb:
     image: mariadb:10
     environment:
       MARIADB_RANDOM_ROOT_PASSWORD: true
-      MARIADB_DATABASE: $DB_DATABASE
-      MARIADB_USER: $DB_USERNAME
-      MARIADB_PASSWORD: $DB_PASSWORD
+      MARIADB_DATABASE: ${DB_DATABASE:-bibroomz}
+      MARIADB_USER: ${DB_USERNAME:-bibroomz}
+      MARIADB_PASSWORD: ${DB_PASSWORD?}
     volumes:
       - mariadb-data:/var/lib/mysql
       - .docker/mariadb/schema.sql:/docker-entrypoint-initdb.d/schema.sql
